--- a/index.html
+++ b/index.html
@@ -531,9 +531,9 @@
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
-    <script type="module" href="./js/theeme.js"></script>
-    <script type="module" href="./js/go-to-top.js"></script>
-    <script type="module" href="./js/mobile-menu.js"></script>
-    <script type="module" href="./js/animation-title.js"></script>
+    <script type="module" src="./js/theeme.js"></script>
+    <script type="module" src="./js/go-to-top.js"></script>
+    <script type="module" src="./js/mobile-menu.js"></script>
+    <script type="module" src="./js/animation-title.js"></script>
   </body>
 </html>
