--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
                 <li class="advantages__item">
                     <div class="advantages__item-wrapper">
                         <svg width="80" height="80">
-                            <use href="./images/icons.svg#icon-percent-50"></use>
+                            <use href="./images/icons.svg#icon-delivery"></use>
                         </svg>
                     </div>
-                    <h3 class="advantages__title">Знижки для учасників бойових дій</h3>
-                    <p class="advantages__description">Особливі пропозиції та знижки</p>
+                    <h3 class="advantages__title">Доставку по всій країні</h3>
+                    <p class="advantages__description">Здійснюємо доставку Новою Поштою або Укрпоштою.</p>
                 </li>
             </ul>
     </section>
