added defer and lazy

--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@
         <h2 class="title animate-list-left" id="services">Наші послуги</h2>
         <ul class="services__list">
             <li class="services__item">
-                <img srcset="
+                <img
+                loading="lazy"
+                 srcset="
                     ./images/servisec/make-glasses-2x.jpg 2x,
                     ./images/servisec/make-glasses-3x.jpg 3x,
                     ./images/servisec/make-glasses-4x.jpg 4x
@@ -211,7 +213,9 @@
                 <h3 class="services__title">Виготовлення окуляр</h3>
             </li>
             <li class="services__item">
-                <img srcset="
+                <img
+                loading="lazy"
+                 srcset="
                     ./images/servisec/repare-glasses-2x.jpg 2x,
                     ./images/servisec/repare-glasses-3x.jpg 3x,
                     ./images/servisec/repare-glasses-4x.jpg 4x
@@ -223,7 +227,8 @@
                 <h3 class="services__title">Ремонт окуляр</h3>
             </li>
             <li class="services__item">
-                <img 
+                <img
+                loading="lazy" 
                 srcset="
                     ./images/servisec/sun-glasses-2x.jpg 2x,
                     ./images/servisec/sun-glasses-3x.jpg 3x,
@@ -236,7 +241,8 @@
                 <h3 class="services__title">Сонячні окуляри</h3>
             </li>
             <li class="services__item">
-                <img 
+                <img
+                loading="lazy" 
                 srcset="
                     ./images/servisec/linses-2x.jpg 2x,
                     ./images/servisec/linses-3x.jpg 3x,
@@ -249,7 +255,8 @@
                 <h3 class="services__title">Контактні лінзи</h3>
             </li>
             <li class="services__item">
-                <img 
+                <img
+                loading="lazy" 
                 srcset="
                     ./images/servisec/accessory-2x.jpg 2x,
                     ./images/servisec/accessory-3x.jpg 3x,
@@ -262,7 +269,8 @@
                 <h3 class="services__title">Аксесуари</h3>
             </li>
             <li class="services__item">
-                <img 
+                <img
+                loading="lazy" 
                 srcset="
                     ./images/servisec/doctor-2x.jpg 2x,
                     ./images/servisec/doctor-3x.jpg 3x,
@@ -282,7 +290,8 @@
             <div class="about__paragraph-optica">
                 <ul class="about__items-optica">
                     <li class="about__item-optica">
-                        <img 
+                        <img
+                        loading="lazy" 
                         srcset="
                             ./images/about/optics-2x.jpg 2x,
                             ./images/about/optics-3x.jpg 3x,
@@ -295,7 +304,8 @@
                         alt="оптика фасад">
                     </li>
                     <li class="about__item-optica">
-                        <img 
+                        <img
+                        loading="lazy" 
                         srcset="
                             ./images/about/optics-logo-2x.jpg 2x,
                             ./images/about/optics-logo-3x.jpg 3x,
@@ -309,7 +319,8 @@
                     </li>
                     <li class="about__item-optica">
                         <a class="footer__address-link" href="https://maps.app.goo.gl/fCpPjG5Xexu3PWMk8" rel="noreferrer noopener" target="_blank">
-                            <img 
+                            <img
+                            loading="lazy" 
                         srcset="
                             ./images/about/map-2x.jpg 2x,
                             ./images/about/map-3x.jpg 3x,
@@ -345,7 +356,8 @@
                 </p>
                 <ul class="about__items-founder">
                     <li class="about__founder-item">
-                        <img 
+                        <img
+                        loading="lazy" 
                         class="about__founder-img"
                         srcset="
                             ./images/about/founder-1-2x.jpg 2x,
@@ -357,7 +369,8 @@
                         alt="оптика фасад">
                     </li>
                     <li class="about__founder-item">
-                        <img 
+                        <img
+                        loading="lazy" 
                         class="about__founder-img"
                         srcset="
                             ./images/about/founder-2-2x.jpg 2x,
@@ -369,7 +382,8 @@
                         alt="оптика вивіска">
                     </li>
                     <li class="about__founder-item">
-                        <img 
+                        <img
+                        loading="lazy" 
                         class="about__founder-img"
                         srcset="
                             ./images/about/founder-3-2x.jpg 2x,
@@ -389,6 +403,7 @@
         <div class="ophthalmologist__paragraph">
             <div class="ophthalmologist__items">
                 <img 
+                loading="lazy"
                 srcset="
                     ./images/about/doctor-2x.jpg 2x,
                     ./images/about/doctor-3x.jpg 3x,
@@ -524,10 +539,10 @@
             <div class="swiper gallery__slider">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img width="412" height="581" class="gallery__images" src="./images/modal/foto1.jpg" alt="news1">
+                    <img loading="lazy" width="412" height="581" class="gallery__images" src="./images/modal/foto1.jpg" alt="news1">
                   </div>
                   <div class="swiper-slide">
-                    <img width="412" height="581" class="gallery__images" src="./images/modal/foto2.jpg" alt="news2">
+                    <img loading="lazy" width="412" height="581" class="gallery__images" src="./images/modal/foto2.jpg" alt="news2">
                   </div>
                 </div>
               </div>
@@ -546,12 +561,12 @@
     </button>
 <!-- scripts -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js" integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA==" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script type="module" src="./js/swiper.js"></script>
-    <script type="module" src="./js/theeme.js"></script>
-    <script type="module" src="./js/go-to-top.js"></script>
-    <script type="module" src="./js/mobile-menu.js"></script>
-    <script type="module" src="./js/animation-title.js"></script>
-    <script type="module" src="./js/modal.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script defer type="module" src="./js/swiper.js"></script>
+    <script defer type="module" src="./js/theeme.js"></script>
+    <script defer type="module" src="./js/go-to-top.js"></script>
+    <script defer type="module" src="./js/mobile-menu.js"></script>
+    <script defer type="module" src="./js/animation-title.js"></script>
+    <script defer type="module" src="./js/modal.js"></script>
   </body>
 </html>
